# qtscintillaadapter

./: .gitmodules  CMakeLists.txt  README.md
src/qtscintillaadapter/: scintillaedit.cpp  scintillaedit.h
